test-n-demo/security/demo-calico/demodb.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: demodb
  namespace: test-db
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: demodb
    spec:
      containers:
      - image: prasenforu/mysql-db:1.0
        imagePullPolicy: IfNotPresent
        name: demodb
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: demodb
  name: demodb
  namespace: test-db
spec:
  clusterIP: 172.30.200.203
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    name: demodb
