test-n-demo/security/demo-calico/App-A-allow3307.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: app-a-allow3307
  namespace: allow3307
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: app-a-allow3307
    spec:
      containers:
      - image: prasenforu/phpapp:5.0
        imagePullPolicy: Always
        name: app-a-allow3307
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: app-a-allow3307
  name: app-a-allow3307
  namespace: allow3307
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: app-a-allow3307
---
apiVersion: v1
kind: Route
metadata:
  labels:
    k8s-app: app-a-allow3307
  name: app-a-allow3307
  namespace: allow3307
spec:
  host: app-a-allow3307.cloudapps.cloud-cafe.in
  port:
    targetPort: 80
  to:
    kind: Service
    name: app-a-allow3307
