test-n-demo/security/demo-calico/App-B-allow3306-in-db-namespace.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: app-b-allow3306
  name: app-b-allow3306
  namespace: test-db
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: app-b-allow3306
---
apiVersion: v1
kind: Route
metadata:
  labels:
    k8s-app: app-b-allow3306
  name: app-b-allow3306
  namespace: test-db
spec:
  host: app-b-allow3306.test-db.cloudapps.cloud-cafe.in
  port:
    targetPort: 80
  to:
    kind: Service
    name: app-b-allow3306
