test-n-demo/security/demo-calico/App-B-allow3306.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: app-b-allow3306
  namespace: allow3306
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: app-b-allow3306
    spec:
      containers:
      - image: prasenforu/phpappocp:1.0
        imagePullPolicy: Always
        name: app-b-allow3306
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: app-b-allow3306
  name: app-b-allow3306
  namespace: allow3306
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: app-b-allow3306
---
apiVersion: v1
kind: Route
metadata:
  labels:
    k8s-app: app-b-allow3306
  name: app-b-allow3306
  namespace: allow3306
spec:
  host: app-b-allow3306.cloudapps.cloud-cafe.in
  port:
    targetPort: 80
  to:
    kind: Service
    name: app-b-allow3306
