test-n-demo/security/demo-calico/Web-server-deny-db-all.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: web-server
  namespace: denydball
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: web-server
    spec:
      containers:
      - image: prasenforu/phpapp:5.0
        imagePullPolicy: Always
        name: web-server
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: web-server
  name: web-server
  namespace: denydball
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: web-server
---
apiVersion: v1
kind: Route
metadata:
  labels:
    k8s-app: web-server
  name: web-server
  namespace: denydball
spec:
  host: web-server.cloudapps.cloud-cafe.in
  port:
    targetPort: 80
  to:
    kind: Service
    name: web-server
